Fix disappearing input in Safari on small screen.

--- a/styles/blocks/subscribe.styl
+++ b/styles/blocks/subscribe.styl
@@ -11,10 +11,13 @@
 	}
 
 	+below(500px) {
-		display: block;
+		&__form {
+			display: block;
+		}
 
 		&__field-col {
 			space(.5);
+			width: 100%;
 			padding-right: 0;
 		}
 
